--- a/package.json
+++ b/package.json
@@ -1,12 +1,22 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+	"name": "server",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"build": "tsc",
+		"dev": "concurrently \"tsc -w\" \"nodemon dist/app.js\""
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"@types/express": "^4.17.11",
+		"concurrently": "^5.3.0",
+		"nodemon": "^2.0.7",
+		"typescript": "^4.1.3"
+	},
+	"dependencies": {
+		"express": "^4.17.1"
+	}
 }
