--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"@types/connect-pg-simple": "^4.2.2",
 		"@types/express": "^4.17.11",
+		"@types/express-session": "^1.17.3",
 		"concurrently": "^5.3.0",
 		"nodemon": "^2.0.7",
 		"typescript": "^4.1.3"
 	},
 	"dependencies": {
+		"connect-pg-simple": "^6.2.1",
 		"dotenv": "^8.2.0",
-		"express": "^4.17.1"
+		"express": "^4.17.1",
+		"express-session": "^1.17.1",
+		"pg": "^8.5.1"
 	}
 }
