--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@types/connect-pg-simple": "^4.2.2",
 		"@types/express": "^4.17.11",
 		"@types/express-session": "^1.17.3",
+		"@types/superagent": "^4.1.10",
 		"concurrently": "^5.3.0",
 		"nodemon": "^2.0.7",
 		"typescript": "^4.1.3"
@@ -23,6 +24,9 @@
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"express-session": "^1.17.1",
-		"pg": "^8.5.1"
+		"jsonwebtoken": "^8.5.1",
+		"jwks-rsa": "^1.12.2",
+		"pg": "^8.5.1",
+		"superagent": "^6.1.0"
 	}
 }
